finish handle route not found and all user functionality #8

--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -17,6 +17,10 @@
     background: #fff;
   }
 
+  .active {
+    @apply text-primary;
+  }
+
   /* Handle */
   ::-webkit-scrollbar-thumb {
     background: #ccc;
