feat:adding transition route page and modal edit profile transition, skeleton card #9

--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -60,6 +60,14 @@
   .ring-off {
     @apply !ring-0 !ring-offset-0 hover:!ring-0 hover:!ring-offset-0;
   }
+
+  .modal-close {
+    @apply overflow-y-visible
+  }
+
+  .modal-open {
+    @apply overflow-y-hidden
+  }
 }
 
 @layer base {
